--- a/app/client/index.html
+++ b/app/client/index.html
@@ -31,7 +31,7 @@
 
     <!-- Moment -->
     <script src="plugins/moment/min/moment.min.js"></script>
-    <script src="plugins/moment/locale/fr.js"></script>
+    <script src="plugins/moment/locale/en-gb.js"></script>
 
     <!-- JsPDF -->
     <script src="https://unpkg.com/jspdf@1.5.3/dist/jspdf.min.js" ></script>
@@ -43,6 +43,16 @@
     <!-- Font Awsome -->
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
     
+    <!-- Dropzone -->
+    <script src="plugins/dropzone/dist/dropzone.js"></script>
+    <link href="plugins/dropzone/dist/basic.css" rel="stylesheet">
+    <link href="plugins/dropzone/dist/dropzone.css" rel="stylesheet">
+    <script src="plugins/ng-dropzone/dist/ng-dropzone.min.js"></script>
+    <script>
+    Dropzone.autoDiscover = false;
+    </script>
+
+
     <!-- Custom styling -->
     <link rel="stylesheet" href="./stylesheets/normalize.css">
     <link rel="stylesheet" href="./build/site.css">
